...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kataSambutan" />

    <ImageButton
        android:id="@+id/fotoProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mainmenu_foto_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
...
